[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "link_budget_analysis"
version = "0.0.1"
authors = [
  { name="Asif Al Noor", email="roonlafisa@gmail.com" },
]
description = "Link Budget Analysis for ground and space communication"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = ["numpy >= 1.20",
                "scipy >= 1.7",
                "matplotlib >= 3.5",
                "tqdm >= 4.6",
                "pyyaml"]

[project.urls]
"Homepage" = "https://github.com/roonlafisa"